--- a/UAV-IQ-Marketing/app/wineflight.html
+++ b/UAV-IQ-Marketing/app/wineflight.html
@@ -107,10 +107,10 @@
 
         <div class="col-sm-12 col-md-6 col-lg-6 left">
           <ul>
-            <li data-id='1'>Take advantage of your terroir by determining quality zones <span class="img"></span></li>
-            <li data-id='2'>Ask for inspections and grape sampling <span class="img"></span></li>
-            <li data-id='3'>Detect and manage hydric stress <span class="img"></span></li>
-            <li data-id='4'>Design and implement a detailed harvest plan <span class="img"></span></li>
+            <li data-id='1'>Take advantage of your terroir by determining quality zones <span class="img"><svg xmlns="http://www.w3.org/2000/svg" width="41" height="41" viewBox="23 23 42 41"><title>  Shape</title><desc>  Created with Sketch.</desc><g id="Page-1"><g id="WIneFlight"  ><g id="Points-icons"><g id="Polygon"><polygon id="Shape" points="56 64 31 64 23 41 44 23 64 41"/></g></g></g></g></svg></span></li>
+            <li data-id='2'>Ask for inspections and grape sampling <span class="img"><svg xmlns="http://www.w3.org/2000/svg" width="41" height="41" viewBox="0 0 42 49"><title>  Flag white</title><desc>  Created with Sketch.</desc><path d="M11 44.6l-9.5-35c-0.3-1 0.3-2 1.3-2.2l0 0c1-0.3 2 0.3 2.2 1.3l0 0 9.5 35c0.3 1-0.3 2-1.3 2.2l0 0C12.2 46.1 11.2 45.5 11 44.6L11 44.6 11 44.6z"/><path d="M36.7 8.2c-0.5-1.9-1.1-4-1.8-6.5 -1.8 1.9-3.7 2.7-5.6 3.2 -1.8 0.5-3.7 0.5-5.4 0.5 -1.8 0-3.6-0.1-5.3-0.1 -1.8 0-3.6 0-5.4 0.5 -1.8 0.5-3.7 1.3-5.6 3.2 0.7 2.5 1.2 4.5 1.8 6.5 0.5 1.9 1 3.7 1.5 5.6 0.5 1.9 1.1 4 1.8 6.5 1.8-1.9 3.7-2.7 5.6-3.2 1.8-0.5 3.6-0.5 5.4-0.5 1.8 0 3.6 0.1 5.3 0.2 1.8 0 3.6 0 5.4-0.5 1.8-0.5 3.7-1.3 5.5-3.2 -0.7-2.5-1.2-4.5-1.7-6.5C37.7 11.9 37.2 10.1 36.7 8.2z"  /></svg></span></li>
+            <li data-id='3'>Detect and manage hydric stress <span class="img"><svg xmlns="http://www.w3.org/2000/svg" width="41" height="41" viewBox="0 0 383.3 383.3"><path d="M273.2 106.9c-27.2-44.9-57.4-83.7-73-102.8 -2.1-2.6-5.2-4.1-8.5-4.1 -3.3 0-6.4 1.5-8.5 4.1 -15.6 19.2-45.8 58-73 102.9 -35 57.8-52.8 105.6-52.8 142.1 0 74.1 60.3 134.3 134.3 134.3s134.3-60.3 134.3-134.3C326 212.5 308.2 164.7 273.2 106.9zM210.1 333.9c-7.8 2-16 3-24.2 3 -50.2 0-91-37.9-91-84.5 0-11.3 3-24.4 8.8-39.1 1-2.5 3.8-3.9 6.6-3.3 2.8 0.6 4.6 3 4.4 5.7 -0.3 3.1-0.5 6.2-0.5 9.1 0 50.7 40.9 93.2 95.1 98.8 2.7 0.3 4.8 2.3 5 4.8C214.5 330.9 212.7 333.2 210.1 333.9z"  /></svg></span></li>
+            <li data-id='4'>Design and implement a detailed harvest plan <span class="img"><svg xmlns="http://www.w3.org/2000/svg" width="41" height="41" viewBox="0 0 56 56"><path d="M44.1 13.6C46.5 10.4 48 6.1 48 1.5h-2c0 8.8-5.8 16-13 16v2c3.4 0 6.5-1.4 9.1-3.7C42.7 22.4 48.3 27.5 55 27.5h1v-1C56 19.7 50.8 14.1 44.1 13.6z"/><path d="M5 44.5c-2.8 0-5 2.2-5 5s2.2 5 5 5 5-2.2 5-5S7.8 44.5 5 44.5z"/><path d="M9 33.5c2.8 0 5-2.2 5-5s-2.2-5-5-5 -5 2.2-5 5S6.2 33.5 9 33.5z"/><path d="M15 42.5c-1.9 0-3.6 1.1-4.5 2.7C11.5 46.5 12 48 12 49.5c0 0.6-0.1 1.2-0.2 1.8C12.7 52.1 13.8 52.5 15 52.5c2.8 0 5-2.2 5-5S17.8 42.5 15 42.5z"/><path d="M12 40.5c0-2.8-2.2-5-5-5s-5 2.2-5 5c0 0.9 0.2 1.7 0.6 2.4C3.4 42.6 4.2 42.5 5 42.5c1.5 0 2.9 0.5 4.1 1.3 0.7-1.1 1.7-2 2.9-2.6C12 41 12 40.7 12 40.5z"/><path d="M25 39.5c-2.2 0-4.1 1.4-4.7 3.4C21.4 44.2 22 45.8 22 47.5c0 0.3 0 0.6-0.1 0.9C22.8 49.1 23.9 49.5 25 49.5c2.8 0 5-2.2 5-5S27.8 39.5 25 39.5z"/><path d="M22 36.5c0-2.8-2.2-5-5-5 -0.6 0-1.3 0.1-1.9 0.4 -0.6 1.2-1.6 2.1-2.8 2.8 -0.1 0.3-0.2 0.7-0.3 1.1 1.2 1.3 1.9 3 1.9 4.8 0 0 0.1 0.1 0.1 0.1C14.4 40.5 14.7 40.5 15 40.5c1.1 0 2.3 0.3 3.3 0.8 0.2-0.1 0.4-0.1 0.6-0.2 0.6-1.1 1.6-2.1 2.7-2.7C21.9 37.8 22 37.1 22 36.5z"/><path d="M27 29.5c-0.5 0-0.9 0.1-1.4 0.2 -0.5 1.4-1.3 2.6-2.5 3.4C23.7 34.2 24 35.3 24 36.5c0 0.4 0 0.7-0.1 1.1C24.3 37.5 24.6 37.5 25 37.5c1.6 0 3 0.5 4.3 1.5C30.9 38.1 32 36.4 32 34.5 32 31.7 29.8 29.5 27 29.5z"/><path d="M35 35.5c-0.4 0-0.7 0-1.1 0.1 -0.3 2-1.5 3.8-3.2 4.8 0.8 1.2 1.3 2.6 1.3 4.1 0.9 0.7 1.9 1 3 1 2.8 0 5-2.2 5-5S37.8 35.5 35 35.5z"/><path d="M36.7 25.5c-0.6 2.1-2.2 3.8-4.3 4.6 0.8 1 1.4 2.3 1.5 3.6C34.5 33.5 34.9 33.5 35 33.5c1.6 0 3 0.5 4.3 1.5C40.9 34.1 42 32.4 42 30.5 42 27.6 39.6 25.3 36.7 25.5z"/><path d="M19.6 19.9c0.1 0.3 0.3 0.5 0.5 0.7 1.1 0.2 2.2 0.6 3.1 1.3 0.6-2.7 2.9-4.9 5.7-5.3C28.5 14.3 26.4 12.5 24 12.5c-1.9 0-3.5 1-4.4 2.6C19.9 15.9 20 16.7 20 17.5 20 18.3 19.9 19.1 19.6 19.9z"/><path d="M10.1 21.6c0.9 0.1 1.7 0.4 2.4 0.9C12.7 22.5 12.9 22.5 13 22.5c2.8 0 5-2.2 5-5s-2.2-5-5-5 -5 2.2-5 5C8 19.1 8.8 20.7 10.1 21.6z"/><path d="M15.4 24.1c-0.2 0.2-0.3 0.4-0.5 0.6C15.6 25.8 16 27.2 16 28.5c0 0.4 0 0.7-0.1 1.1C16.3 29.5 16.6 29.5 17 29.5c1.9 0 3.6 0.7 4.9 2C23.2 30.6 24 29.1 24 27.5c0-0.1 0-0.3 0-0.4 -0.4-0.7-0.7-1.6-0.9-2.4 -1.1-1.7-3.3-2.5-5.4-2C17 23.3 16.2 23.8 15.4 24.1z"/><path d="M25 23.5c0 1.6 0.7 3.1 2 4 1.2 0 2.5 0.3 3.5 1C33.1 28.2 35 26.1 35 23.5c0-2.8-2.2-5-5-5S25 20.7 25 23.5z"/></svg></span></li>
           </ul>
         </div>
 
@@ -122,16 +122,16 @@
         <h1 class="section-header">Adopt Good Farming Practices</h1>
 
         <div class="col-sm-12 col-md-6 col-lg-6 ipad">
-          <img src="img/Bitmap 5.png" alt=""/>
+          <img id="imageid2" src="img/Bitmap 5.png" alt=""/>
         </div>
 
         <div class="col-sm-12 col-md-6 col-lg-6 left">
           <ul>
-            <li data-id='5'>Implement variable rate cultivation to optimize use of inputs <span class="img"></span></li>
-            <li data-id='6'>Optimize water ressources <span class="img"></span></li>
-            <li data-id='7'>Identify pests and disease, assess severity of damage <span class="img"></span></li>
-            <li data-id='8'>Detect problems before they are visible to the naked eyes <span class="img"></span></li>
-            <li data-id='9'>Qualitatively and quantitatively evaluate your vineyard's health over time <span class="img"></span></li>
+            <li data-id='5'>Implement variable rate cultivation to optimize use of inputs <span class="img"><svg xmlns="http://www.w3.org/2000/svg" width="41" height="41" viewBox="23 23 42 41"><title>  Shape</title><desc>  Created with Sketch.</desc><g id="Page-1" ><g id="WIneFlight"  ><g id="Points-icons"><g id="Polygon"><polygon id="Shape" points="56 64 31 64 23 41 44 23 64 41"/></g></g></g></g></svg></span></li>
+            <li data-id='6'>Optimize water ressources <span class="img"><svg xmlns="http://www.w3.org/2000/svg" width="41" height="41" viewBox="0 0 383.3 383.3"><path d="M273.2 106.9c-27.2-44.9-57.4-83.7-73-102.8 -2.1-2.6-5.2-4.1-8.5-4.1 -3.3 0-6.4 1.5-8.5 4.1 -15.6 19.2-45.8 58-73 102.9 -35 57.8-52.8 105.6-52.8 142.1 0 74.1 60.3 134.3 134.3 134.3s134.3-60.3 134.3-134.3C326 212.5 308.2 164.7 273.2 106.9zM210.1 333.9c-7.8 2-16 3-24.2 3 -50.2 0-91-37.9-91-84.5 0-11.3 3-24.4 8.8-39.1 1-2.5 3.8-3.9 6.6-3.3 2.8 0.6 4.6 3 4.4 5.7 -0.3 3.1-0.5 6.2-0.5 9.1 0 50.7 40.9 93.2 95.1 98.8 2.7 0.3 4.8 2.3 5 4.8C214.5 330.9 212.7 333.2 210.1 333.9z"  /></svg></span></li>
+            <li data-id='7'>Identify pests and disease, assess severity of damage <span class="img"><svg xmlns="http://www.w3.org/2000/svg" width="41" height="41" viewBox="0 0 50 50"><path d="M48.7 42.3l-8.9-8.9c0 0-0.1-0.1-0.1-0.1 -0.8 1.2-1.8 2.4-2.8 3.5 -1.1 1.1-2.3 2-3.5 2.8 0 0 0.1 0.1 0.1 0.1l8.9 8.9c1.8 1.8 4.6 1.8 6.4 0C50.4 46.9 50.4 44.1 48.7 42.3z" class="a"/><path d="M35.5 6.1C27.4-2 14.2-2 6.1 6.1c-8.1 8.1-8.1 21.3 0 29.4 8.1 8.1 21.3 8.1 29.4 0C43.6 27.4 43.6 14.2 35.5 6.1zM9.9 31.7C3.9 25.7 3.9 15.9 9.9 9.9c6-6 15.8-6 21.8 0 6 6 6 15.8 0 21.8C25.7 37.7 15.9 37.7 9.9 31.7z" class="a"/><path d="M31 24.6l-3.8-3.8h-1c-0.1-0.7-0.2-1.4-0.4-2.1l2.6-3.5c0.3-0.4 0.2-0.9-0.2-1.2 -0.4-0.3-0.9-0.2-1.2 0.2l-2 2.8c-0.6-1-1.4-1.8-2.3-2.3 0.1-0.2 0.2-0.5 0.2-0.8 0-1.1-1-1.9-2.2-1.9 -1.2 0-2.2 0.9-2.2 2 0 0.3 0.1 0.5 0.2 0.8 -0.9 0.5-1.7 1.3-2.3 2.3l-2-2.8c-0.3-0.4-0.8-0.5-1.2-0.2 -0.4 0.3-0.5 0.8-0.2 1.2l2.6 3.5c-0.2 0.6-0.3 1.3-0.4 2.1h-1l-3.8 3.8c-0.3 0.3-0.3 0.9 0 1.2 0.3 0.3 0.9 0.3 1.2 0l3.3-3.2h0.3c0.1 0.7 0.2 1.4 0.4 2.1l-2.6 3.5c-0.3 0.4-0.2 0.9 0.2 1.2 0.4 0.3 0.9 0.2 1.2-0.2l2-2.8c1 1.7 2.5 2.8 4.3 2.8 1.7 0 3.3-1.1 4.3-2.8l2 2.8c0.2 0.2 0.4 0.4 0.7 0.4 0.2 0 0.4-0.1 0.5-0.2 0.4-0.3 0.5-0.8 0.2-1.2l-2.6-3.5c0.2-0.6 0.3-1.3 0.4-2.1h0.3l3.3 3.2c0.2 0.2 0.4 0.3 0.6 0.3 0.2 0 0.5-0.1 0.6-0.3C31.4 25.5 31.4 24.9 31 24.6z" class="a"/></svg></span></li>
+            <li data-id='8'>Detect problems before they are visible to the naked eyes <span class="img"><svg xmlns="http://www.w3.org/2000/svg" width="41" height="41" viewBox="0 0 42 49"><title>  Flag white</title><desc>  Created with Sketch.</desc><path d="M11 44.6l-9.5-35c-0.3-1 0.3-2 1.3-2.2l0 0c1-0.3 2 0.3 2.2 1.3l0 0 9.5 35c0.3 1-0.3 2-1.3 2.2l0 0C12.2 46.1 11.2 45.5 11 44.6L11 44.6 11 44.6z"/><path d="M36.7 8.2c-0.5-1.9-1.1-4-1.8-6.5 -1.8 1.9-3.7 2.7-5.6 3.2 -1.8 0.5-3.7 0.5-5.4 0.5 -1.8 0-3.6-0.1-5.3-0.1 -1.8 0-3.6 0-5.4 0.5 -1.8 0.5-3.7 1.3-5.6 3.2 0.7 2.5 1.2 4.5 1.8 6.5 0.5 1.9 1 3.7 1.5 5.6 0.5 1.9 1.1 4 1.8 6.5 1.8-1.9 3.7-2.7 5.6-3.2 1.8-0.5 3.6-0.5 5.4-0.5 1.8 0 3.6 0.1 5.3 0.2 1.8 0 3.6 0 5.4-0.5 1.8-0.5 3.7-1.3 5.5-3.2 -0.7-2.5-1.2-4.5-1.7-6.5C37.7 11.9 37.2 10.1 36.7 8.2z"  /></svg></span></li>
+            <li data-id='9'>Qualitatively and quantitatively evaluate your vineyard's health over time <span class="img"><svg xmlns="http://www.w3.org/2000/svg" width="41" height="41" viewBox="0 0 490.2 490.2"><path d="M469.1 0H156.4c-11.5 0-20.9 9.4-20.9 20.9v114.7H20.9C9.4 135.6 0 145 0 156.5v312.8c0 11.5 9.4 20.9 20.9 20.9h312.8c11.5 0 20.9-9.4 20.9-20.9V354.5h114.7c11.5 0 20.9-9.4 20.9-20.9V20.9C490 9.4 480.6 0 469.1 0zM312.8 449.3H40.7V177.2h94.9v156.4c0 11.5 9.4 20.9 20.9 20.9h156.4v94.8H312.8zM312.8 312.8H177.2V177.2h135.5v135.6H312.8zM449.3 312.8h-94.9V156.4c0-11.5-9.4-20.9-20.9-20.9H177.2V40.7h272.1V312.8z"/></svg></span></li>
           </ul>
         </div>
 
@@ -224,11 +224,11 @@
         function _loop(idx) {
             $looped.removeClass('current').eq(idx).addClass('current');
             document.getElementById("imageid").src="img/WineFlight Page/"+$looped.eq(idx)[0].dataset.id+".png";
-            console.log($looped.eq(idx)[0].dataset.id);
+            // console.log($looped.eq(idx)[0].dataset.id);
             timeOut = setTimeout(function () {
                 index = (idx + 1) % $looped.length;
                 _loop(index);
-            }, 1000);
+            }, 3500);
         };
         _loop(index);
         $("#best-wine ul").hover(function () {
@@ -237,12 +237,43 @@
             _loop(index);
         });
         $("#best-wine ul li").hover(function () {
-            $("li").removeClass("current");
+            $("#best-wine ul").removeClass("current");
             $(this).addClass("current");
+            console.log($(this)[0].dataset.id);
+            document.getElementById("imageid").src="img/WineFlight Page/"+$(this)[0].dataset.id+".png";
         }, function () {
             $("li").removeClass("current");
         });
       });
+
+      $(function () {
+          var $looped = $('#best-practice ul li');
+          var timeOut;
+          var index = 0;
+          function _loop(idx) {
+              $looped.removeClass('current').eq(idx).addClass('current');
+              document.getElementById("imageid2").src="img/WineFlight Page/"+$looped.eq(idx)[0].dataset.id+".png";
+              console.log($looped.eq(idx)[0].dataset.id);
+              timeOut = setTimeout(function () {
+                  index = (idx + 1) % $looped.length;
+                  _loop(index);
+              }, 1500);
+          };
+          _loop(index);
+          $("#best-practice ul").hover(function () {
+              window.clearTimeout(timeOut);
+          }, function () {
+              _loop(index);
+          });
+          $("#best-practice ul li").hover(function () {
+              $("#best-practice ul li").removeClass("current");
+              $(this).addClass("current");
+              console.log($(this)[0].dataset.id);
+              document.getElementById("imageid2").src="img/WineFlight Page/"+$(this)[0].dataset.id+".png";
+          }, function () {
+              $("li").removeClass("current");
+          });
+        });
     </script>
   </body>
 </html>
