--- a/UAV-IQ-Marketing/app/datacollection.html
+++ b/UAV-IQ-Marketing/app/datacollection.html
@@ -189,7 +189,7 @@
           </div>
 
           <div  class="col-sm-12">
-            <label for="">Location</label>
+            <label for="">Message</label>
             <textarea name="message"></textarea>
           </div>
 
