--- a/UAV-IQ-Marketing/app/instafarm.html
+++ b/UAV-IQ-Marketing/app/instafarm.html
@@ -225,7 +225,7 @@
           </div>
 
           <div  class="col-sm-12">
-            <label for="">Location</label>
+            <label for="">Message</label>
             <textarea name="message"></textarea>
           </div>
 
