--- a/UAV-IQ-Marketing/app/wineflight.html
+++ b/UAV-IQ-Marketing/app/wineflight.html
@@ -216,7 +216,7 @@
           </div>
 
           <div  class="col-sm-12">
-            <label for="">Location</label>
+            <label for="">Message</label>
             <textarea name="message"></textarea>
           </div>
 
