--- a/UAV-IQ-Marketing/app/droneOperators.html
+++ b/UAV-IQ-Marketing/app/droneOperators.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="col-sm-12 col-md-4">
-          <img src="img/Data collection_How it works 2.png" alt=""/>
+          <img src="img/Data processing_Number 2.png" alt=""/>
           <h2>Cloud Processing and Storage</h2>
           <p>
             We process imagery into comprehensive intuitive visual presentations or crop health
