--- a/app/home.html
+++ b/app/home.html
@@ -11,31 +11,31 @@
 
     <!-- Global stylesheets -->
   	<link href="https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900" rel="stylesheet" type="text/css">
-  	<link href="./assets/css/icons/icomoon/styles.css" rel="stylesheet" type="text/css">
-  	<link href="./assets/css/bootstrap.css" rel="stylesheet" type="text/css">
-  	<link href="./assets/css/core.css" rel="stylesheet" type="text/css">
-  	<link href="./assets/css/components.css" rel="stylesheet" type="text/css">
-  	<link href="./assets/css/colors.css" rel="stylesheet" type="text/css">
+  	<link href="assets/css/icons/icomoon/styles.css" rel="stylesheet" type="text/css">
+  	<link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css">
+  	<link href="assets/css/core.css" rel="stylesheet" type="text/css">
+  	<link href="assets/css/components.css" rel="stylesheet" type="text/css">
+  	<link href="assets/css/colors.css" rel="stylesheet" type="text/css">
   	<!-- /global stylesheets -->
 
   	<!-- Core JS files -->
-  	<script type="text/javascript" src="./assets/js/plugins/loaders/pace.min.js"></script>
-  	<script type="text/javascript" src="./assets/js/core/libraries/jquery.min.js"></script>
-  	<script type="text/javascript" src="./assets/js/core/libraries/bootstrap.min.js"></script>
-  	<script type="text/javascript" src="./assets/js/plugins/loaders/blockui.min.js"></script>
+  	<script type="text/javascript" src="assets/js/plugins/loaders/pace.min.js"></script>
+  	<script type="text/javascript" src="assets/js/core/libraries/jquery.min.js"></script>
+  	<script type="text/javascript" src="assets/js/core/libraries/bootstrap.min.js"></script>
+  	<script type="text/javascript" src="assets/js/plugins/loaders/blockui.min.js"></script>
   	<!-- /core JS files -->
 
   	<!-- Theme JS files -->
-  	<script type="text/javascript" src="./assets/js/plugins/tables/datatables/datatables.min.js"></script>
-    <script type="text/javascript" src="./assets/js/plugins/forms/selects/select2.min.js"></script>
-    <script type="text/javascript" src="./assets/js/plugins/tables/datatables/extensions/select.min.js"></script>
-    <script type="text/javascript" src="./assets/js/core/app.js"></script>
-  	<script type="text/javascript" src="./assets/js/plugins/tables/datatables/extensions/buttons.min.js"></script>
+  	<script type="text/javascript" src="assets/js/plugins/tables/datatables/datatables.min.js"></script>
+    <script type="text/javascript" src="assets/js/plugins/forms/selects/select2.min.js"></script>
+    <script type="text/javascript" src="assets/js/plugins/tables/datatables/extensions/select.min.js"></script>
+    <script type="text/javascript" src="assets/js/core/app.js"></script>
+  	<script type="text/javascript" src="assets/js/plugins/tables/datatables/extensions/buttons.min.js"></script>
 
   	<!-- /theme JS files -->
 
     <!-- inject:css -->
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- endinject -->
 
   </head>
@@ -182,6 +182,6 @@
     	</div>
   </body>
   <!-- inject:js -->
-  <script src="./js/app.js"></script>
+  <script src="js/app.js"></script>
   <!-- endinject -->
 </html>
