--- a/app/home.html
+++ b/app/home.html
@@ -11,30 +11,31 @@
 
     <!-- Global stylesheets -->
   	<link href="https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900" rel="stylesheet" type="text/css">
-  	<link href="app/assets/css/icons/icomoon/styles.css" rel="stylesheet" type="text/css">
-  	<link href="app/assets/css/bootstrap.css" rel="stylesheet" type="text/css">
-  	<link href="app/assets/css/core.css" rel="stylesheet" type="text/css">
-  	<link href="app/assets/css/components.css" rel="stylesheet" type="text/css">
-  	<link href="app/assets/css/colors.css" rel="stylesheet" type="text/css">
+  	<link href="./assets/css/icons/icomoon/styles.css" rel="stylesheet" type="text/css">
+  	<link href="./assets/css/bootstrap.css" rel="stylesheet" type="text/css">
+  	<link href="./assets/css/core.css" rel="stylesheet" type="text/css">
+  	<link href="./assets/css/components.css" rel="stylesheet" type="text/css">
+  	<link href="./assets/css/colors.css" rel="stylesheet" type="text/css">
   	<!-- /global stylesheets -->
 
   	<!-- Core JS files -->
-  	<script type="text/javascript" src="app/assets/js/plugins/loaders/pace.min.js"></script>
-  	<script type="text/javascript" src="app/assets/js/core/libraries/jquery.min.js"></script>
-  	<script type="text/javascript" src="app/assets/js/core/libraries/bootstrap.min.js"></script>
-  	<script type="text/javascript" src="app/assets/js/plugins/loaders/blockui.min.js"></script>
+  	<script type="text/javascript" src="./assets/js/plugins/loaders/pace.min.js"></script>
+  	<script type="text/javascript" src="./assets/js/core/libraries/jquery.min.js"></script>
+  	<script type="text/javascript" src="./assets/js/core/libraries/bootstrap.min.js"></script>
+  	<script type="text/javascript" src="./assets/js/plugins/loaders/blockui.min.js"></script>
   	<!-- /core JS files -->
 
   	<!-- Theme JS files -->
-  	<script type="text/javascript" src="app/assets/js/plugins/tables/datatables/datatables.min.js"></script>
-    <script type="text/javascript" src="app/assets/js/plugins/forms/selects/select2.min.js"></script>
-    <script type="text/javascript" src="app/assets/js/plugins/tables/datatables/extensions/select.min.js"></script>
-    <script type="text/javascript" src="app/assets/js/core/app.js"></script>
-  	<script type="text/javascript" src="app/assets/js/plugins/tables/datatables/extensions/buttons.min.js"></script>
+  	<script type="text/javascript" src="./assets/js/plugins/tables/datatables/datatables.min.js"></script>
+    <script type="text/javascript" src="./assets/js/plugins/forms/selects/select2.min.js"></script>
+    <!-- <script type="text/javascript" src="./assets/js/plugins/tables/datatables/extensions/select.min.js"></script> -->
+    <!-- <script type="text/javascript" src="./assets/js/core/app.js"></script> -->
+  	<!-- <script type="text/javascript" src="./assets/js/plugins/tables/datatables/extensions/buttons.min.js"></script> -->
+
   	<!-- /theme JS files -->
 
     <!-- inject:css -->
-    <link rel="stylesheet" href="app/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- endinject -->
 
   </head>
@@ -84,46 +85,7 @@
 
         				<!-- Page header -->
         				<div class="page-header">
-        					<div class="page-header-content">
-        						<div class="page-title">
-        							<h4><i class="icon-arrow-left52 position-left"></i> <span class="text-semibold">Datatables</span> - Basic</h4>
-        						</div>
 
-        						<div class="heading-elements">
-        							<div class="heading-btn-group">
-        								<a href="#" class="btn btn-link btn-float has-text"><i class="icon-bars-alt text-primary"></i><span>Statistics</span></a>
-        								<a href="#" class="btn btn-link btn-float has-text"><i class="icon-calculator text-primary"></i> <span>Invoices</span></a>
-        								<a href="#" class="btn btn-link btn-float has-text"><i class="icon-calendar5 text-primary"></i> <span>Schedule</span></a>
-        							</div>
-        						</div>
-        					</div>
-
-        					<div class="breadcrumb-line">
-        						<ul class="breadcrumb">
-        							<li><a href="index.html"><i class="icon-home2 position-left"></i> Home</a></li>
-        							<li><a href="datatable_basic.html">Datatables</a></li>
-        							<li class="active">Basic</li>
-        						</ul>
-
-        						<ul class="breadcrumb-elements">
-        							<li><a href="#"><i class="icon-comment-discussion position-left"></i> Support</a></li>
-        							<li class="dropdown">
-        								<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-        									<i class="icon-gear position-left"></i>
-        									Settings
-        									<span class="caret"></span>
-        								</a>
-
-        								<ul class="dropdown-menu dropdown-menu-right">
-        									<li><a href="#"><i class="icon-user-lock"></i> Account security</a></li>
-        									<li><a href="#"><i class="icon-statistics"></i> Analytics</a></li>
-        									<li><a href="#"><i class="icon-accessibility"></i> Accessibility</a></li>
-        									<li class="divider"></li>
-        									<li><a href="#"><i class="icon-gear"></i> All settings</a></li>
-        								</ul>
-        							</li>
-        						</ul>
-        					</div>
         				</div>
         				<!-- /page header -->
 
@@ -134,7 +96,7 @@
         					<!-- Basic datatable -->
         					<div class="panel panel-flat">
         						<div class="panel-heading">
-        							<h5 class="panel-title">Basic datatable</h5>
+        							<h5 class="panel-title">Products Validation</h5>
         							<div class="heading-elements">
         								<ul class="icons-list">
 			                		<li><a data-action="collapse"></a></li>
@@ -145,17 +107,7 @@
         						</div>
 
                     <table class="table datatable-basic">
-                      <thead>
-                        <tr>
-                          <th>SKU</th>
-                          <th>Name</th>
-                          <th>MIN</th>
-                          <th>MAX</th>
-                          <th>GOAL</th>
-                          <th>Stock Goal</th>
-                          <th>Facing Goal</th>
-                        </tr>
-                      </thead>
+
                     </table>
         					</div>
         					<!-- /basic datatable -->
@@ -181,6 +133,6 @@
     	</div>
   </body>
   <!-- inject:js -->
-  <script src="app/js/app.js"></script>
+  <script src="./js/app.js"></script>
   <!-- endinject -->
 </html>
