--- a/SalesValidation/home.html
+++ b/SalesValidation/home.html
@@ -26,6 +26,8 @@
   	<!-- /core JS files -->
 
   	<!-- Theme JS files -->
+    <script type="text/javascript" src="./assets/js/plugins/visualization/d3/d3.min.js"></script>
+    <script type="text/javascript" src="./assets/js/plugins/visualization/d3/d3_tooltip.js"></script>
   	<script type="text/javascript" src="./assets/js/plugins/tables/datatables/datatables.min.js"></script>
     <script type="text/javascript" src="./assets/js/plugins/forms/selects/select2.min.js"></script>
     <!-- <script type="text/javascript" src="./assets/js/plugins/tables/datatables/extensions/select.min.js"></script> -->
@@ -41,38 +43,48 @@
   </head>
   <body>
     <div class="navbar navbar-inverse">
-  		<div class="navbar-header">
-  			<a class="navbar-brand" href="index.html"><img src="assets/images/logo_light.png" alt=""></a>
+      <div class="navbar-header">
+        <a class="navbar-brand" href="index.html"><img src="assets/images/logo_light.png" alt=""></a>
 
-  			<ul class="nav navbar-nav visible-xs-block">
-  				<li><a data-toggle="collapse" data-target="#navbar-mobile"><i class="icon-tree5"></i></a></li>
-  				<li><a class="sidebar-mobile-main-toggle"><i class="icon-paragraph-justify3"></i></a></li>
-  			</ul>
-  		</div>
+        <ul class="nav navbar-nav pull-right visible-xs-block">
+          <li><a data-toggle="collapse" data-target="#navbar-mobile"><i class="icon-tree5"></i></a></li>
+          <li><a class="sidebar-mobile-main-toggle"><i class="icon-paragraph-justify3"></i></a></li>
+        </ul>
+      </div>
 
-  		<div class="navbar-collapse collapse" id="navbar-mobile">
+      <div class="navbar-collapse collapse" id="navbar-mobile">
+        <ul class="nav navbar-nav">
+          <li>
+            <a href="home.html">Sales Validation</a>
+          </li>
 
-  			<ul class="nav navbar-nav navbar-right">
-  				<li class="dropdown dropdown-user">
-  					<a class="dropdown-toggle" data-toggle="dropdown">
-  						<img src="assets/images/placeholder.jpg" alt="">
-  						<span>Victoria</span>
-  						<i class="caret"></i>
-  					</a>
+          <li>
+            <a href="salesObjectives.html">Sales Objective</a>
+          </li>
+        </ul>
 
-  					<ul class="dropdown-menu dropdown-menu-right">
-  						<li><a href="#"><i class="icon-user-plus"></i> My profile</a></li>
-  						<li><a href="#"><i class="icon-coins"></i> My balance</a></li>
-  						<li><a href="#"><span class="badge bg-teal-400 pull-right">58</span> <i class="icon-comment-discussion"></i> Messages</a></li>
-  						<li class="divider"></li>
-  						<li><a href="#"><i class="icon-cog5"></i> Account settings</a></li>
-  						<li><a href="#"><i class="icon-switch2"></i> Logout</a></li>
-  					</ul>
-  				</li>
-  			</ul>
-  		</div>
-  	</div>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown dropdown-user">
+            <a class="dropdown-toggle" data-toggle="dropdown">
+              <img src="assets/images/placeholder.jpg" alt="">
+              <span>Victoria</span>
+              <i class="caret"></i>
+            </a>
+
+            <ul class="dropdown-menu dropdown-menu-right">
+              <li><a href="#"><i class="icon-user-plus"></i> My profile</a></li>
+              <li><a href="#"><i class="icon-coins"></i> My balance</a></li>
+              <li><a href="#"><span class="badge badge-warning pull-right">58</span> <i class="icon-comment-discussion"></i> Messages</a></li>
+              <li class="divider"></li>
+              <li><a href="#"><i class="icon-cog5"></i> Account settings</a></li>
+              <li><a href="#"><i class="icon-switch2"></i> Logout</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
     <div class="page-container" style="min-height:226px">
+
 
         <div class="page-container">
 
@@ -82,6 +94,7 @@
 
         			<!-- Main content -->
         			<div class="content-wrapper">
+
 
         				<!-- Page header -->
         				<div class="page-header">
@@ -94,22 +107,39 @@
         				<div class="content">
 
         					<!-- Basic datatable -->
-        					<div class="panel panel-flat">
-        						<div class="panel-heading">
-        							<h5 class="panel-title">Products Validation</h5>
-        							<div class="heading-elements">
-        								<ul class="icons-list">
-			                		<li><a data-action="collapse"></a></li>
-			                		<li><a data-action="reload"></a></li>
-			                		<li><a data-action="close"></a></li>
-			                	</ul>
-		                	</div>
-        						</div>
+                  <div class="panel panel-flat">
 
-                    <table class="table datatable-basic">
 
-                    </table>
-        					</div>
+                    <div class="panel-body">
+                      <div class="tabbable">
+                        <ul class="nav nav-tabs">
+                          <li class="active"><a href="#tableBeer" data-table="tableBeer" data-toggle="tab" aria-expanded="false">Beer</a></li>
+                          <li class=""><a href="#tableSpirits" data-table="tableSpirits" data-toggle="tab" aria-expanded="true">Spirits</a></li>
+                          <li class=""><a href="#tableWines"  data-table="tableWines" data-toggle="tab" aria-expanded="true">Wines</a></li>
+                        </ul>
+
+                        <div class="tab-content">
+                          <div class="tab-pane active" id="tableBeer">
+                            <table  class="table tableBeer datatable-basic">
+
+                            </table>
+                          </div>
+
+                          <div class="tab-pane" id="tableSpirits">
+                            <table  class="table tableSpirits datatable-basic">
+
+                            </table>
+                          </div>
+
+                          <div class="tab-pane" id="tableWines">
+                            <table  class="table tableWines datatable-basic">
+
+                            </table>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
         					<!-- /basic datatable -->
 
         					<!-- Footer -->
