--- a/app/home.html
+++ b/app/home.html
@@ -11,28 +11,28 @@
 
     <!-- Global stylesheets -->
   	<link href="https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900" rel="stylesheet" type="text/css">
-  	<link href="./assets/css/icons/icomoon/styles.css" rel="stylesheet" type="text/css">
-  	<link href="./assets/css/bootstrap.css" rel="stylesheet" type="text/css">
-  	<link href="./assets/css/core.css" rel="stylesheet" type="text/css">
-  	<link href="./assets/css/components.css" rel="stylesheet" type="text/css">
-  	<link href="./assets/css/colors.css" rel="stylesheet" type="text/css">
+  	<link href="./app/assets/css/icons/icomoon/styles.css" rel="stylesheet" type="text/css">
+  	<link href="./app/assets/css/bootstrap.css" rel="stylesheet" type="text/css">
+  	<link href="./app/assets/css/core.css" rel="stylesheet" type="text/css">
+  	<link href="./app/assets/css/components.css" rel="stylesheet" type="text/css">
+  	<link href="./app/assets/css/colors.css" rel="stylesheet" type="text/css">
   	<!-- /global stylesheets -->
 
   	<!-- Core JS files -->
-  	<script type="text/javascript" src="./assets/js/plugins/loaders/pace.min.js"></script>
-  	<script type="text/javascript" src="./assets/js/core/libraries/jquery.min.js"></script>
-  	<script type="text/javascript" src="./assets/js/core/libraries/bootstrap.min.js"></script>
-  	<script type="text/javascript" src="./assets/js/plugins/loaders/blockui.min.js"></script>
+  	<script type="text/javascript" src="./app/assets/js/plugins/loaders/pace.min.js"></script>
+  	<script type="text/javascript" src="./app/assets/js/core/libraries/jquery.min.js"></script>
+  	<script type="text/javascript" src="./app/assets/js/core/libraries/bootstrap.min.js"></script>
+  	<script type="text/javascript" src="./app/assets/js/plugins/loaders/blockui.min.js"></script>
   	<!-- /core JS files -->
 
   	<!-- Theme JS files -->
-    <script type="text/javascript" src="./assets/js/plugins/visualization/d3/d3.min.js"></script>
-    <script type="text/javascript" src="./assets/js/plugins/visualization/d3/d3_tooltip.js"></script>
-  	<script type="text/javascript" src="./assets/js/plugins/tables/datatables/datatables.min.js"></script>
-    <script type="text/javascript" src="./assets/js/plugins/forms/selects/select2.min.js"></script>
-    <!-- <script type="text/javascript" src="./assets/js/plugins/tables/datatables/extensions/select.min.js"></script> -->
-    <!-- <script type="text/javascript" src="./assets/js/core/app.js"></script> -->
-  	<!-- <script type="text/javascript" src="./assets/js/plugins/tables/datatables/extensions/buttons.min.js"></script> -->
+    <script type="text/javascript" src="./app/assets/js/plugins/visualization/d3/d3.min.js"></script>
+    <script type="text/javascript" src="./app/assets/js/plugins/visualization/d3/d3_tooltip.js"></script>
+  	<script type="text/javascript" src="./app/assets/js/plugins/tables/datatables/datatables.min.js"></script>
+    <script type="text/javascript" src="./app/assets/js/plugins/forms/selects/select2.min.js"></script>
+    <!-- <script type="text/javascript" src="./app/assets/js/plugins/tables/datatables/extensions/select.min.js"></script> -->
+    <!-- <script type="text/javascript" src="./app/assets/js/core/app.js"></script> -->
+  	<!-- <script type="text/javascript" src="./app/assets/js/plugins/tables/datatables/extensions/buttons.min.js"></script> -->
 
   	<!-- /theme JS files -->
 
@@ -163,6 +163,6 @@
     	</div>
   </body>
   <!-- inject:js -->
-  <script src="./js/app.js"></script>
+  <script src="./app/js/app.js"></script>
   <!-- endinject -->
 </html>
