--- a/app/planificasionPicos.html
+++ b/app/planificasionPicos.html
@@ -113,22 +113,22 @@
                 <div class="content">
 
                   <div class="row">
-                    <div class="col-sm-2 col-md-4">
+                    <div class="col-sm-12 col-md-4">
                       <div class="panel panel-primary">
                         <div class="valuesStack">
-                            <div id="totalStores" class="col-sm-12 col-md-3">
+                            <div id="totalStores" class="col-sm-3 col-md-3">
                               <h5>Total Stores</h5>
                               <span>3</span>
                             </div>
-                            <div id="picosDone" class="col-sm-12 col-md-3">
+                            <div id="picosDone" class="col-sm-3 col-md-3">
                               <h5>Picos Done</h5>
                               <span>0</span>
                             </div>
-                            <div id="picosTodo" class="col-sm-12 col-md-3">
+                            <div id="picosTodo" class="col-sm-3 col-md-3">
                               <h5>Picos To Do</h5>
                               <span>3</span>
                             </div>
-                            <div id="picos" class="col-sm-12 col-md-3">
+                            <div id="picos" class="col-sm-3 col-md-3">
                               <h5>Picos</h5>
                               <span>
                                 <div id="initGuage" style="width:60px; height:60px; margin: 0px auto; padding:0;">
@@ -138,17 +138,17 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-sm-10 col-md-8">
+                    <div class="col-sm-12 col-md-8">
                       <!-- Basic datatable -->
                       <div class="panel panel-primary">
                         <div class="panel-heading">
                           <h5 class="panel-title">Your Stores</h5>
                         </div>
                         <div class="panel-body">
-                          <table class="table tableBasic datatable-basic">
+                          <table id="picosTable" class="table tableBasic datatable-basic">
                             <thead>
                               <tr>
-                                <th>Last Visited</th>
+                                <th>Last Reviewed</th>
                                 <th>Client</th>
                                 <th>PICOS Classification</th>
                                 <th>Assortment & Price SKU's</th>
@@ -160,9 +160,9 @@
 
                             <tbody>
                               <tr class="error" data-id="0">
-                                <td>2017-01-06</td>
+                                <td>2017-01-06 - 5:56am</td>
                                 <td>125654 - Pueblo</td>
-                                <td>Gold</td>
+                                <td>G S S</td>
                                 <td class="danger">15</td>
                                 <td>10</td>
                                 <td>3</td>
@@ -171,9 +171,9 @@
                                 </td>
                               </tr>
                               <tr data-id="0">
-                                <td>2017-01-06</td>
+                                <td>2017-01-06 - 4:16pm</td>
                                 <td>125654 - Pueblo</td>
-                                <td>Gold</td>
+                                <td>S G B</td>
                                 <td>15</td>
                                 <td>10</td>
                                 <td>3</td>
@@ -183,9 +183,9 @@
                               </tr>
 
                               <tr data-id="0">
-                                <td>2017-01-06</td>
+                                <td>2017-01-06 - 6:16am</td>
                                 <td>125654 - Pueblo</td>
-                                <td>Gold</td>
+                                <td>B B G</td>
                                 <td>15</td>
                                 <td>10</td>
                                 <td>3</td>
@@ -195,9 +195,9 @@
                               </tr>
 
                               <tr class="error" data-id="0">
-                                <td>2017-01-06</td>
+                                <td>2017-01-06 - 3:32pm</td>
                                 <td>125654 - Pueblo</td>
-                                <td>Gold</td>
+                                <td>S B S</td>
                                 <td class="danger">15</td>
                                 <td>10</td>
                                 <td>3</td>
@@ -206,10 +206,10 @@
                                 </td>
                               </tr>
 
-                              <tr class="error" data-id="0" >
-                                <td>2017-01-06</td>
+                              <tr class="error" data-id="0">
+                                <td>2017-01-06 - 1:52pm</td>
                                 <td>125654 - Pueblo</td>
-                                <td>Gold</td>
+                                <td>G G S</td>
                                 <td class="danger">15</td>
                                 <td>10</td>
                                 <td>3</td>
